Add Android Oreo post link

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -12,7 +12,7 @@ header {
   min-height: 80px;
   color: #f6f6f6;
   position: fixed;
-  box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .23), 0 3px 10px rgba(0, 0, 0, .16);
   top: 0;
   left: 0;
   width: 100%;
