--- a/static/css/app.css
+++ b/static/css/app.css
@@ -312,9 +312,12 @@ footer p {
 .content-title {
     text-align: center;
     width: 100%;
-    font-size: 32px;
-    margin-top: 2em;
-    margin-bottom: 2em;
+    color: #484848;
+    font-size: 36px;
+    font-style: bold;
+    font-weight: 700;
+    margin-top: 1.3em;
+    margin-bottom: 1.3em;
 }
 
 .home {
@@ -353,17 +356,17 @@ footer p {
 
 .link-image-list ul li a {
     display: block;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
 }
 
 .link-image-list ul li img {
     width: 130px;
     background-color: white;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
+    border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 4px;
     box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .20), 2px 4px 6px 2px rgba( 0, 0, 0, .10);
     -moz-box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .20), 2px 4px 6px 2px rgba( 0, 0, 0, .10);
     -webkit-box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .20), 2px 4px 6px 2px rgba( 0, 0, 0, .10);
@@ -373,9 +376,9 @@ footer p {
     -moz-box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .30), 2px 4px 6px 2px rgba( 0, 0, 0, .15);
     -webkit-box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .30), 2px 4px 6px 2px rgba( 0, 0, 0, .15);
     box-shadow: -2px 4px 6px -2px rgba( 0, 0, 0, .30), 2px 4px 6px 2px rgba( 0, 0, 0, .15);
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
 }
 
 .float-left {
@@ -405,14 +408,14 @@ footer p {
 .body-container {
     background-color: white;
     padding: 16px;
-    margin-top: 56px;
-    border-radius: 3px;
+    margin-top: 20px;
+    border-radius: 6px;
     box-shadow: 0 0 4px rgba(0, 0, 0, .14);
 }
 
 .ad-float-right {
     background-color: white;
-    border-radius: 3px;
+    border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
     -moz-box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
@@ -572,8 +575,8 @@ footer p {
         margin-right: 0;
     }
     .content-title {
-        margin-top: 3em;
-        margin-bottom: 1.2em;
+        margin-top: 1em;
+        margin-bottom: 1em;
     }
     .home {
         float: none;
