修复周报二维码点击链接错误/修改右侧广告图片大小以及添加UCloud广告图

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -414,13 +414,18 @@ footer p {
 
 .ad-float-right {
     background-color: white;
-    border-radius: 6px;
+    border-radius: 4px;
     box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
     -moz-box-shadow: rgba(0, 0, 0, 0.14) 0px 0px 4px, rgba(0, 0, 0, 0.14) 0px 4px 8px;
-    padding: 6px;
+    padding: 4px;
     margin-right: 0px;
     margin-top: 6px;
+}
+
+.ad-float-right {
+    width: 130px;
+    border-radius: 4px;
 }
 
 #books-list ul {
