修改 btc 和 eth 二维码图片以及显示错乱的问题

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -296,13 +296,17 @@ footer p {
 }
 
 .donate-method-qr {
-    width: 30%;
+    width: 25%;
     display: block;
     float: left;
 }
 
 .donate-method-qr-img {
     width: 100%;
+}
+
+.donate-method-qr span {
+    font-size: 10px;
 }
 
 .donate-method-bitcoin {
