添加全局变灰css

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,4 +1,4 @@
-ahtml,
+html,
 body {
     font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 15px;
@@ -488,6 +488,17 @@ footer p {
 
 .pop-text {
     color: white;
+}
+
+html {
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: url("data:image/svg+xml;utf8,#grayscale");
+    filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+    -webkit-filter: grayscale(1);
 }
 
 /* Widescreen desktop. */
