去除灰色模式

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -490,7 +490,7 @@ footer p {
     color: white;
 }
 
-html {
+.html {
     filter: grayscale(100%);
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
