修改一些错误

--- a/static/css/banner.css
+++ b/static/css/banner.css
@@ -373,21 +373,21 @@
     }
 }
 
-// @media only screen and (min-device-width: 320px) and (max-device-width: 480px), (max-width: 900px) {
-//   .banner h1, .banner h2 {
-//     font-size: 24px;
-//     line-height: 30px;
-//   }
-//   .banner ul li {
-//     height: 240px;
-//   }
-//   .banner .inner {
-//     padding-top: 100px;
-//     padding-bottom: 50px;
-//   }
-//   .banner p {
-//     font-size: 15px;
-//     width: 80%;
-//     margin: 0 auto;
-//   }
-// }
+/* @media only screen and (min-device-width: 320px) and (max-device-width: 480px), (max-width: 900px) {
+  .banner h1, .banner h2 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+  .banner ul li {
+    height: 240px;
+  }
+  .banner .inner {
+    padding-top: 100px;
+    padding-bottom: 50px;
+  }
+  .banner p {
+    font-size: 15px;
+    width: 80%;
+    margin: 0 auto;
+  }
+} */
