--- a/static/css/app.css
+++ b/static/css/app.css
@@ -44,7 +44,7 @@ header h1 {
 .navbar-light .navbar-nav .show > .nav-link,
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-  color: #6ab344;
+  color: var(--site-primary-color);
   background-color: white;
   padding: 3px 6px;
   border-radius: 4px;
@@ -226,6 +226,10 @@ code {
   word-break: break-word;
   background-color: #f8f9fa;
   padding: 1px 4px;
+}
+
+blockquote code {
+  background-color: #FFFFFF;
 }
 
 .screenshot {
@@ -677,6 +681,31 @@ blockquote {
   max-width: 24%;
 }
 
+.mr-2-5 {
+  margin-right: 0.9rem!important; 
+}
+
+.card-body {
+  padding: 1rem;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  background-color: var(--site-primary-color);
+}
+
+
+.c-tag {
+  font-size: 13px;
+  border-radius: 4px;
+  padding: 0.14rem 0.6rem;
+  color: white!important;
+  margin: 0 5px;
+  background-color: #5f6368;
+}
+
+.c-tag-h {
+  background-color: var(--site-warning-color);
+}
 /* Widescreen desktop. */
 
 @media (min-width: 1200px) {
