fixed friends image display error

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -420,6 +420,7 @@ blockquote {
 }
 
 .link-image-list ul li img {
+  width: 130px;
   background-color: white;
   border-radius: 6px;
   -webkit-border-radius: 6px;
