--- a/static/css/backtotop.css
+++ b/static/css/backtotop.css
@@ -1,95 +1,114 @@
 .zh-backtotop {
-    position: fixed;
-    bottom: 105px;
-    right: 1%;
-    z-index: 19;
+  position: fixed;
+  bottom: 105px;
+  right: 1%;
+  z-index: 19;
 }
 
 .zh-backtotop .btn-action {
-    display: block;
-    width: 56px;
-    height: 56px;
-    background-color: #ff5722;
-    border-radius: 28px;
-    border: 0;
-    cursor: pointer;
-    position: relative;
-    box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .2);
-    -moz-box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .2);
-    -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .2);
-}
-
-.zh-backtotop .btn-action+.btn-action {
-    margin-top: 5px
-}
-
-.zh-backtotop div {
-    position: absolute;
-    right: 0;
-    left: 0;
-    margin: auto
-}
-
-.zh-backtotop .arrow {
-    position: absolute;
-    top: 16px;
-    left: 16px;
+  display: block;
+  width: 56px;
+  height: 56px;
+  background-color: #ff5722;
+  border-radius: 28px;
+  border: 0;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .zh-backtotop .btn-action:hover {
-    background-color: #e24134;
-    box-shadow: 0 0 6px rgba(0, 0, 0, .16), 0 4px 10px rgba(0, 0, 0, .22);
-    -moz-box-shadow: 0 0 6px rgba(0, 0, 0, .16), 0 4px 10px rgba(0, 0, 0, .22);
-    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, .16), 0 4px 10px rgba(0, 0, 0, .22);
+  background-color: #e24134;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.16), 0 4px 10px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.16), 0 4px 10px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.16),
+    0 4px 10px rgba(0, 0, 0, 0.22);
+}
+
+.btn-action + .btn-action {
+  margin-top: 5px;
+}
+
+.zh-backtotop div {
+  position: absolute;
+  right: 0;
+  left: 0;
+  margin: auto;
+}
+
+.zh-backtotop .arrow {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+}
+
+.btn-donate {
+  background-color: #4caf50 !important;
+  margin-bottom: 15px;
+}
+
+.btn-donate:hover {
+  background-color: #3c853f !important;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.16), 0 4px 10px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.16), 0 4px 10px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.16),
+    0 4px 10px rgba(0, 0, 0, 0.22);
+}
+
+.icon-donate {
+  width: 36px;
+  height: 36px;
 }
 
 @media (max-width: 1024px) {
-    .zh-backtotop {
-        margin: auto;
-        left: auto;
-        right: 1em;
-        bottom: 6.5em
-    }
+  .zh-backtotop {
+    margin: auto;
+    left: auto;
+    right: 1em;
+    bottom: 6.5em;
+  }
 }
 
-@media (max-width:979px) {
-    .zh-backtotop {
-        margin: auto;
-        left: auto;
-        right: 1em;
-        bottom: 6.5em
-    }
+@media (max-width: 979px) {
+  .zh-backtotop {
+    margin: auto;
+    left: auto;
+    right: 1em;
+    bottom: 6.5em;
+  }
 }
 
-@media (max-width:768px) {
-    .zh-backtotop {
-        margin: auto;
-        left: auto;
-        right: 1em;
-        bottom: 6.5em
-    }
+@media (max-width: 768px) {
+  .zh-backtotop {
+    margin: auto;
+    left: auto;
+    right: 1em;
+    bottom: 6.5em;
+  }
 }
 
 @media (max-width: 550px) {
-    .zh-backtotop .btn-action {
-        width: 48px;
-        height: 48px;
-    }
+  .zh-backtotop .btn-action {
+    width: 48px;
+    height: 48px;
+  }
 
-    .zh-backtotop .arrow {
-        top: 12px;
-        left: 12px;
-    }
+  .zh-backtotop .arrow {
+    top: 12px;
+    left: 12px;
+  }
 }
 
 @media (max-width: 320px) {
-    .zh-backtotop .btn-action {
-        width: 40px;
-        height: 40px;
-    }
+  .zh-backtotop .btn-action {
+    width: 40px;
+    height: 40px;
+  }
 
-    .zh-backtotop .arrow {
-        top: 8px;
-        left: 8px;
-    }
+  .zh-backtotop .arrow {
+    top: 8px;
+    left: 8px;
+  }
 }
